# routes/cart.js
@@ -1,75 +1,28 @@
-const express = require('express');
+const { protect } = require("../middlewares/authMiddleware"); // Assuming an auth middleware
+const { getCartController,  addToCartController, updateCartController, removeFromCartController, getCartByIdController } = require("../controlers/carts");
+const authorization = require("../middlewares/authorization");
 
-const router = express.Router();
-const {protect} = require("../middlewares/authMiddleware") // Assuming an auth middleware
-const {
-    addToCart,
-    removeFromCart,
-    getCart,
-    updateCartItemQuantity,
-} = require('../services/cart');
-const { admin } = require('../middlewares/adminMiddleware');
-const Cart = require('../models/Cart');
-
-// @route   GET /api/cart
-// @desc    Get user's cart
+const cartsRouter = (router) => {
+  router.get("/carts", protect, getCartController);
+  // @route   POST /api/cart/add
+  // @desc    Add item to cart
+  router.post("/carts", protect, addToCartController);
 
 
-router.get('/',protect, async (req, res) => {
-    try {
-        const cart = await getCart(req.user._id);
-        res.json(cart);
-    } catch (error) {
-        res.status(500).json({ message: error.message });
-    }
-});
 
-router.get("/all-cart", protect, admin, async (req, res) => {
-    try {
-        const carts = await Cart.find();
-        res.json(carts);
-    } catch (error) {
-        res.status(500).json({ message: error.message });
-    }
-});
+  // @route   GET /api/carts/:id
+  // @desc    Get cart by id
+  router.get("/carts/:id", protect, getCartByIdController);
 
-// @route   POST /api/cart/add
-// @desc    Add item to cart
-router.post('/add', protect, async (req, res) => {
-    const { productId, quantity } = req.body;
+  // @route   PUT /api/cart/update
+  // @desc    Update item quantity in cart
+  router.put("/carts/:id", protect, updateCartController );
 
-    try {
-        const updatedCart = await addToCart(req.user._id, productId, quantity);
-        res.json(updatedCart);
-    } catch (error) {
-        res.status(500).json({ message: error.message });
-    }
-});
+  // @route   DELETE /api/cart/remove
+  // @desc    Remove item from cart
+  router.delete("/carts/:id", protect, removeFromCartController );
 
-// @route   PUT /api/cart/update
-// @desc    Update item quantity in cart
-router.put('/update', protect, async (req, res) => {
-    const { productId, quantity } = req.body;
+  return router;
+};
 
-    try {
-        const updatedCart = await updateCartItemQuantity(req.user._id, productId, quantity);
-        res.json(updatedCart);
-    } catch (error) {
-        res.status(500).json({ message: error.message });
-    }
-});
-
-// @route   DELETE /api/cart/remove
-// @desc    Remove item from cart
-router.delete('/remove', protect, async (req, res) => {
-    const { productId } = req.body;
-
-    try {
-        const updatedCart = await removeFromCart(req.user._id, productId);
-        res.json(updatedCart);
-    } catch (error) {
-        res.status(500).json({ message: error.message });
-    }
-});
-
-module.exports = router;
+module.exports = cartsRouter;
