# routes/product.js
@@ -9,34 +9,19 @@ const {
 } = require("../middlewares/cloudinaryUpload");
 const { protect } = require("../middlewares/authMiddleware");
 const authorization = require("../middlewares/authorization");
-const { createProductController, getProductController, getProductByIdController } = require("../controlers/product");
+const { createProductController, getProductController, getProductByIdController, updateProductController, deleteProductController, recommendSimilarProductsController } = require("../controlers/product");
 
 
 
 const productRoutes = (router) => {
   // @route   GET /api/recommendations/:productId
   // @desc    Get product recommendations for a given product
-  router.get("/recommendations/:productId", async (req, res) => {
-    const productId = req.params.productId;
-    try {
-      const recommendations = await recommendSimilarProducts(productId);
-      res
-        .json({
-          code: 200,
-          data: recommendations,
-          message: "Recommendations fetched successfully",
-        })
-        .status(200);
-    } catch (error) {
-      console.error("Error in recommending products:", error);
-      throw new Error("Could not fetch recommendations");
-    }
-  });
+  router.get("/products/recomendations/:productId", recommendSimilarProductsController);
 
   // @route   GET /api/products
   // @desc    Get all products
 
-  router.get("/products", getProductController)
+  router.get("/products", getProductController);
 
     // @route   POST /api/products/
     // @desc    Create new product
@@ -51,6 +36,18 @@ const productRoutes = (router) => {
   // @route   GET /api/products/:id
   // @desc    Get product by id
   router.get("/products/:id", getProductByIdController);
+
+  // @route   PUT /api/products/:id
+  // @desc    Update product by id
+
+  router.put("/products/:id", protect, authorization(["admin"]), updateProductController );
+
+  // @route   DELETE /api/products/:id
+  // @desc    Delete product by id
+
+  router.delete("/products/:id", protect, authorization(["admin"]), deleteProductController );
+
+  return router;
 };
 
 module.exports = productRoutes;
