# routes/user.js
@@ -1,7 +1,9 @@
 const express = require("express");
 const {
   getUserProfile,
-  updateUserProfile
+  updateUserProfile,
+  getSingleUser,
+  getUserByEmail
 } = require("../services/user");
 const { protect } = require("../middlewares/authMiddleware"); 
 const User = require("../models/User");
@@ -10,8 +12,9 @@ const {
   resetPassword,
 } = require("../services/resetPassword");
 const authorization = require("../middlewares/authorization");
-const { getAllUsersController,  userAvaterController, updateUserProfileController, getUserByIdController, deleteuserController } = require("../controlers/users");
+const { getAllUsersController,  userAvaterController, updateUserProfileController, getUserByIdController, deleteuserController, requestPasswordResetController, resetPasswordController } = require("../controlers/users");
 const { avatarUpload, avatarCloudinaryUpload } = require("../middlewares/avatarCloudinaryUpload");
+const { badRequest } = require("../utils/error");
 
 const router = express.Router();
 
@@ -30,42 +33,21 @@ const userRoutes = (router) => {
   // @access  Private
   router.put("/users/:id", protect, updateUserProfileController);
 
-
   // @route DELETE /api/users/:id
   // @desc Delete user (protected route)
   // @access Private
   router.delete("/users/:id", protect, deleteuserController);
-
 
   // @route   PUT /api/users/:id Avater
   // @desc    Update user profile Image (protected route)
   // @access  Private
   router.put("/users/:id/avatar", protect, avatarUpload, avatarCloudinaryUpload, userAvaterController);
 
-
-
   // POST /api/auth/forgot-password - Request a password reset
-  router.post("/forgot-password", async (req, res) => {
-    try {
-      const { email } = req.body;
-      const result = await requestPasswordReset(email);
-      res.json(result);
-    } catch (error) {
-      res.status(500).json({ message: error.message });
-    }
-  });
+  router.post("/users/forgot-password", requestPasswordResetController);
 
   // POST /api/auth/reset-password/:token - Reset password using token
-  router.post("/reset-password/:token", async (req, res) => {
-    try {
-      const { token } = req.params;
-      const { newPassword } = req.body;
-      const result = await resetPassword(token, newPassword);
-      res.json(result);
-    } catch (error) {
-      res.status(500).json({ message: error.message });
-    }
-  });
+  router.put("/users/reset-password/:token", resetPasswordController );
 
   return router;
 };
